--- a/sass/layout/_pages-main.scss
+++ b/sass/layout/_pages-main.scss
@@ -252,6 +252,10 @@ body {
           .button-container {
             margin: 0 auto;
           }
+
+          .banner-img {
+            display: none;
+          }
         }
       }
     }
